--- a/pages/home.html
+++ b/pages/home.html
@@ -7,7 +7,9 @@
     <title>Employee Payroll Home</title>
     <link rel="stylesheet" href="../css/home.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;1,500&display=swap"  rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,600;1,500&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -25,7 +27,7 @@
             <div class="emp-detail-text">
                 Employee Details<div class="emp-count">10</div>
             </div>
-            <a href="../page/employePayRoll.html" class="add-button">
+            <a href="../pages/employeePayrollForm.html" class="add-button">
                 <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
         </div>
         <div class="table-main">
